@@ -20,9 +20,13 @@
 # *
 # */
 import os
-import util, xbmcprovider, xbmcutil, resolver
-from provider import ResolveException
 from Plugins.Extensions.archivCZSK.archivczsk import ArchivCZSK
+
+from tools_xbmc.contentprovider import xbmcprovider
+from tools_xbmc.contentprovider.provider import ResolveException
+from tools_xbmc.tools import xbmcutil
+from tools_xbmc.resolver import resolver
+from tools_xbmc.compat import XBMCCompatInterface
 
 __scriptid__ = 'plugin.video.rtvs.sk'
 __scriptname__ = 'rtvs.sk'
@@ -31,7 +35,6 @@ __addon__ = ArchivCZSK.get_xbmc_addon(__scriptid__)
 __language__ = __addon__.getLocalizedString
 __settings__ = __addon__.getSetting
 
-sys.path.append(os.path.join (__addon__.getAddonInfo('path'), 'resources', 'lib'))
 import rtvs
 settings = {'quality':__addon__.getSetting('quality')}
 
@@ -95,4 +98,10 @@ class RtvsXBMCContentProvider(xbmcprovider.XBMCMultiResolverContentProvider):
 		except ResolveException as e:
 			self._handle_exc(e)
 
-RtvsXBMCContentProvider(rtvs.RtvsContentProvider(),settings, __addon__,session).run(params)
+
+def rtvs_run(session, params):
+	RtvsXBMCContentProvider(rtvs.RtvsContentProvider(), settings, __addon__, session).run(params)
+
+
+def main(addon):
+	return XBMCCompatInterface(rtvs_run)
