@@ -1,19 +1,13 @@
-<?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="misanov, Maros Ondrasek" version="1.10.2">
-  <requires>
-    <import addon="xbmc.python" version="2.1.0" />
-    <import addon="script.module.stream.resolver" version="1.6.13" />
-  </requires>
-  <extension library="default.py" point="xbmc.python.pluginsource" provides="video">
-    <provides>video</provides>
-  </extension>
-  <extension point="xbmc.addon.metadata">
-    <summary lang="en">rtvs.sk</summary>
-    <summary lang="cs">rtvs.sk</summary>
-    <summary lang="sk">rtvs.sk</summary>
-    <description lang="en">Watch online TV archive from rtvs.sk</description>
-    <description lang="cs">Sledujte TV archiv zo serveru rtvs.sk</description>
-    <description lang="sk">Sledujte TV archív zo serveru rtvs.sk</description>
-    <platform>all</platform>
-  </extension>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="misanov, Maros Ondrasek" version="1.11.0">
+	<requires>
+		<import addon="enigma2.archivczsk" version="1.7.0"/>
+		<import addon="tools.xbmc" version="1.0" />
+	</requires>
+	<extension point="archivczsk.addon.video"/>
+	<extension point="archivczsk.addon.metadata">
+		<description lang="en">Watch online TV archive from rtvs.sk</description>
+		<description lang="cs">Sledujte TV archiv zo serveru rtvs.sk</description>
+		<description lang="sk">Sledujte TV archív zo serveru rtvs.sk</description>
+	</extension>
 </addon>
